# Copyright (c) 2010 Fizians SAS. <http://www.fizians.com>
# This file is part of Rozofs.
#
# Rozofs is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published
# by the Free Software Foundation, version 2.
#
# Rozofs is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see
# <http://www.gnu.org/licenses/>.


add_definitions(-DD_REENTRANT -D_FILE_OFFSET_BITS=64)
include_directories(${CMAKE_BINARY_DIR}) # for config.h
include_directories(${CMAKE_SOURCE_DIR}) # for librozofs headers
include_directories(${PTHREAD_INCLUDE_DIR})
link_directories(${CMAKE_BINARY_DIR}/rozofs)

add_executable(exportd
    volume.h
    volume.c
    mreg.h
    mreg.c
    mdir.h
    mdir.c
    mslnk.h
    mslnk.c
    dirent_journal.h
    mdirent.h
    dirent_file_repair.c
    writeback_cache.c
    dirent_file.c
    dirent_cache.c
    dirent_search.c
    dirent_insert.c
    dirent_enum2String_file_repair_cause_e.h
    cache.h
    cache.c
    exp_cache.c
    exp_cache.h
    export.h
    export_tracking.c
    eproto.c
    monitor.h
    monitor.c
    econfig.h
    econfig.c
    epproto.c
    exportd.c
    exp_cache_dirty_mgt.c
    export_expgw_conf.c
    export_expgw_conf.h
    export_internal_channel.c
    export_internal_channel.h
    export_nblock_init.c
    export_expgateway_conf.c
    export_expgateway_conf.h
    export_expgateway_sup.c
    export_gwprotoclt.c      
    eproto_nb.c
    eproto_nb.h    
    export_north_intf.c     
    export_share.c     
    export_share.h     
    eprotosvc_nb.c
   xattr_acl.c
   xattr_main.c
   xattr_nocache.c
   xattr_security.c
   xattr_stub.c
   xattr_system.c
   xattr_trusted.c
   xattr_user.c
   acl.h
   exp_cache.h
   posix_acl_attr.h
   rozofs_ext4.h
   xattr.h
   xattr_main.h
   export_tracking_poll.c
   dirent_writeback_cache.c
   export_trash_reload.c
    geo_replication.c
    geo_replication_dbg.c    
    geo_replication.h
    
    geo_replica_proto_nb.c    
    geo_replica_proto_nb.h
    geo_replica_protosvc_nb.h   
    geo_replica_protosvc_nb.c   
    geo_replica_srv.c
    geo_replica_srv.h
    geo_replica_north_intf.c
    geo_replica_north_intf.h
    geo_replica_ctx.c
    geo_replica_ctx.h
    geo_replica_tmr.c
    geo_replica_tmr.h

    rozofs_quota.h
    rozofs_quota_api.h
    rozofs_quota.c
    quota_writeback_cache.c
    export_quota_thread.c    
)
target_link_libraries(exportd rozofs ${PTHREAD_LIBRARY} ${UUID_LIBRARY} ${CONFIG_LIBRARY})


#add_executable(expgateway
#    expgw_attr_cache.c
#    expgw_attr_cache.h
#    expgw_eprotosvc.c
#    expgw_export.h
#    expgw_fid_cache.c
#    expgw_fid_cache.h
#    expgw_lookup.c
#    expgw_attr.c
#    expgw_create_dir_file.c
#    expgw_delete_dir_file.c
#    expgw_mgt.c
#    expgw_rozofs_north_intf.c
#    expgw_send.c
#    expgw_proto.h
#    expgw_exportd_north_intf.c
#    expgw_main.c
#    expgw_main.h
#    expgw_nblock_init.c
#    expgw_gwprotosvc.c
#    expgw_gwprotosvc.h
#    expgw_gw_poll.c
#)
#target_link_libraries(expgateway rozofs ${PTHREAD_LIBRARY} ${UUID_LIBRARY} ${CONFIG_LIBRARY})


add_executable(rozofs_repquota
    rozofs_quota.h
    rozofs_quota.c
    rozofs_quota_api.h
    quota_writeback_cache.c
    rozofs_repquota.c
    econfig.h
    econfig.c
)
target_link_libraries(rozofs_repquota rozofs ${PTHREAD_LIBRARY} ${UUID_LIBRARY} ${CONFIG_LIBRARY})


# Install
install(CODE "EXECUTE_PROCESS (COMMAND mkdir -p ${ROZOFS_CONFIG_DIR})" COMPONENT export)

install(TARGETS exportd
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    COMPONENT export
)

install(FILES export.conf.sample DESTINATION ${ROZOFS_CONFIG_DIR} COMPONENT export)
install(FILES export.conf DESTINATION ${ROZOFS_CONFIG_DIR} COMPONENT export)
